# global-intelligence-system

./: .gitignore  README.md  cloud.local.json  config.example.json  pyproject.toml  requirements.txt  run-cloud-test.ps1  setup-cloud-test.ps1
.github/workflows/: daily.yml  global-intelligence-v3.yml  intelligence.yml  international_trade_ops.yml
comm/: __init__.py
comm/outbox/: demo-port-logistics-modernization.json
content/: video_script.py
core/: report.py  storage.py
dashboard/: index.html
data/: clean_news.json  raw_news.json  summary.json  trends.json
docs/: cloud-run.md  github-headquarters.md  github-token-setup.md
intelligence/: __init__.py
media/drafts/: demo-port-logistics-modernization.md  internal-brief-library-cleanup.md
memory/: last_run.json
memory/cases/: demo-port-logistics-modernization.json  internal-brief-library-cleanup.json
output/: dashboard.json
reports/: cloud_acceptance.json  cloud_acceptance.md  cloud_connection_check.json  cloud_create_upload_and_acceptance.json  cloud_run.json  cloud_test_status.json  cloud_test_status.md  headquarters_status.md  owner_inbox.md  watchdog_status.md
src/: ai_summary.py  analyze_trend.py  dashboard_builder.py  fetch_news.py  generate_report.py  preprocess.py  trend_analyzer.py
tests/: test_cycle.py
workflows/: __init__.py  cloud_acceptance.py  cloud_connection_check.py  cloud_run.py  cloud_test_status.py  daily_job.py  persist_state.py  preflight_check.py  prepare_release.py  trigger_cloud_acceptance.py  upload_and_trigger_cloud.py
(+16 files in other folders)
